# badvent-of-code-22

./: .gitignore  advent-of-code.cabal  cabal.project  cabal.project.freeze
app/: Main.hs
src/: DayEight.hs  DayEleven.hs  DayFive.hs  DayFour.hs  DayNine.hs  DayOne.hs  DaySeven.hs  DaySix.hs  DayTen.hs  DayThree.hs  DayTwelve.hs  DayTwo.hs  ImportList.hs  Utils.hs
src/Utils/: Grid2d.hs
