cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

synopsis:           advent of code '22
license:            NONE
author:             Kris Ralph
maintainer:         kris.ralph45@gmail.com
extra-source-files: README.md

common common-options
  ghc-options:
    -Wall
    -Wunused-imports
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards
    TupleSections
    ImportQualifiedPost
    RankNTypes
    LambdaCase
    GeneralizedNewtypeDeriving
    DerivingVia
    DeriveAnyClass
    DeriveGeneric

  build-depends:
    base,
    random,
    bytestring,
    containers,
    unordered-containers,
    hashable,
    array,
    text,
    time,
    directory,
    safe,
    parsec,
    lens,
    template-haskell,
    pqueue,
    pretty-simple,

library
  import:           common-options
  exposed-modules:
    ImportList
    Utils
    Utils.Grid2d
    DayOne
    DayTwo
    DayThree
    DayFour
    DayFive
    DaySix
    DaySeven
    DayEight
    DayNine
    DayTen
    DayEleven
    DayTwelve
    Paths_advent_of_code
  hs-source-dirs:   src

executable main
  import:           common-options
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:    advent-of-code

